--- a/package.json
+++ b/package.json
@@ -4,13 +4,27 @@
   "private": true,
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
+    "@emailjs/browser": "^3.11.0",
+    "@react-three/drei": "^9.78.0",
+    "@react-three/fiber": "^8.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.18",
+    "maath": "^0.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.24.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
+    "styled-components": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
