--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-app",
   "version": "0.1.0",
+  "homepage": "https://HoangBaoNghiBien.github.io",
   "private": true,
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
