--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
     "@emailjs/browser": "^3.11.0",
+    "@material-ui/core": "^4.12.4",
     "@react-three/drei": "^9.78.0",
     "@react-three/fiber": "^8.13.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,8 +14,10 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.18",
     "maath": "^0.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-validation": "^0.1.11",
