--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.24.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-scroll-motion": "^0.3.2",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.0.2",
