--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-scroll-motion": "^0.3.2",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^6.0.2",
+    "the-platform": "^0.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
