--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
+    "react-full-page-scroll": "^0.1.3",
     "react-globe.gl": "^2.24.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
