--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
-  "name": "web-app",
+  "name": "new-web",
   "version": "0.1.0",
-  "homepage": "https://HoangBaoNghiBien.github.io",
   "private": true,
+  "homepage": "https://HoangBaoNghiBien.github.io",
   "dependencies": {
-    "@ap.cx/react-fullpage": "^0.3.0",
-    "@emailjs/browser": "^3.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@react-three/drei": "^9.78.0",
-    "@react-three/fiber": "^8.13.4",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
-    "framer-motion": "^10.12.18",
-    "maath": "^0.7.0",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
-    "react-full-page-scroll": "^0.1.3",
     "react-globe.gl": "^2.24.1",
+    "react-icons": "^4.10.1",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.9",
-    "react-scroll-motion": "^0.3.2",
-    "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0",
-    "semantic-ui-react": "^2.1.4",
-    "styled-components": "^6.0.2",
-    "the-platform": "^0.10.1",
+    "react-twitter-widgets": "^1.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -63,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
-    "tailwindcss": "^3.3.2"
+    "gh-pages": "^5.0.0"
   }
 }
