--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://HoangBaoNghiBien.github.io",
+  "homepage": "https://UICBEILab.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
